[5.0.x] Fixed #35012 -- Restored wrapping admin fieldsets with multiple fields per line.
Thanks James Gillard for the report.

Regression in 729266c6f29c7a0677b24926a86a767ef3078b26.

Backport of 4aae864463b149393a36e0b18345cf6ed392634d from main

--- a/django/contrib/admin/static/admin/css/forms.css
+++ b/django/contrib/admin/static/admin/css/forms.css
@@ -26,6 +26,10 @@ form .form-row p {
     display: flex;
 }
 
+.form-multiline {
+    flex-wrap: wrap;
+}
+
 .form-multiline > div {
     padding-bottom: 10px;
 }
